--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
         "react-hot-toast": "^2.4.1",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.20.0",
+        "react-webcam": "^7.2.0",
         "recharts": "^2.10.3",
         "zod": "^3.22.4"
     },
