--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,14 @@
   command = "npm install && npm run build"
   publish = "dist"
 
+# API Proxy - Update BACKEND_URL with your deployed backend URL
+# Example: https://smartwarex-backend.onrender.com
+[[redirects]]
+  from = "/api/*"
+  to = "https://YOUR_BACKEND_URL.onrender.com/api/:splat"
+  status = 200
+  force = true
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
