--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,7 @@ scikit-learn==1.3.2
 prophet==1.1.5
 statsmodels==0.14.0
 tensorflow==2.14.0
+ml-dtypes==0.2.0
 ortools==9.8.3296
 matplotlib==3.8.2
 seaborn==0.13.0
